# nezha

./: .gitignore  CMakeLists.txt  build.py  readme
backends/: CMakeLists.txt
backends/sdf/src/: entry.c
backends/sponza/src/: entry.c
examples/: CMakeLists.txt
examples/cnn/: main.cpp
examples/compute_test/: main.cpp
examples/matmul/: main.cpp
examples/parallel_doubling/: main.cpp
examples/parallel_sum/: main.cpp
examples/relu/: main.cpp
examples/render_triangle/: main.cpp
examples/render_triangle_with_cnn/: main.cpp
ext/imgui/: imgui.h  imgui_impl_vulkan.cpp  imgui_impl_vulkan.h
frontends/: CMakeLists.txt
frontends/editor/: entry.c
frontends/ml_runtime/: ml_entry.c
frontends/runtime/: entry.c
nezha/: CMakeLists.txt  arena.hpp  bits.hpp  bpool.c  bump_alloc.cpp  compute_pass.cpp  descriptor_helper.cpp  file.cpp  gpu.c  gpu.h  gpu_buffer.cpp  gpu_buffer.hpp  gpu_context.cpp  gpu_context.hpp  gpu_image.cpp  gpu_image.hpp  graph.c  graph.cpp  graph.h  graph_binding.c  graph_binding.h  graph_buffer.h  graph_image.h  graph_job.c  graph_job.h  graph_pass.h  graph_pass_compute.c  graph_pass_compute.h  graph_resource.h  graph_transfer.h  heap_vector.c  job.cpp  load_backend.c  math_util.hpp  ml_metal.h  ml_metal.mm  pass.cpp  pipeline.cpp  render_graph.hpp  render_pass.cpp  (+10 more)
nezha/include/nezha/: arena.hpp  backend.h  binding.hpp  bits.hpp  bpool.h  bump_alloc.hpp  compute.h  compute_pass.hpp  def.h  descriptor_helper.hpp  dynamic_array.hpp  file.hpp  frontend.h  frontend_editor.h  gpu.h  gpu_buffer.hpp  gpu_context.hpp  gpu_image.hpp  graph.h  graph.hpp  heap_array.hpp  heap_vector.h  int.h  job.hpp  load_backend.h  math_util.hpp  memory.hpp  pass.hpp  pipeline.hpp  render_pass.hpp  resource.hpp  string.hpp  surface.h  surface.hpp  time.hpp  transfer.hpp  types.hpp  util.h
ref/: main.c
res/glsl/: Makefile  compute_random_kernel.comp  kernel_cnn_mn.comp  kernel_dot.comp  kernel_double.comp  kernel_iota.comp  kernel_matmul.comp  kernel_matmul_4x_threads.comp  kernel_matmul_8x_threads.comp  kernel_multiply.comp  kernel_relu.comp  kernel_sum.comp  kernel_sum32.comp  nezha.glsl  triangle.frag  triangle.vert
res/spv/: compute_random_kernel.comp.spv  fill_random_kernel.comp.spv  kernel_cnn_mn.comp.spv  kernel_dot.comp.spv  kernel_double.comp.spv  kernel_iota.comp.spv  kernel_matmul.comp.spv  kernel_matmul_4x_threads.comp.spv  kernel_matmul_8x_threads.comp.spv  kernel_multiply.comp.spv  kernel_relu.comp.spv  kernel_sum.comp.spv  kernel_sum32.comp.spv  triangle.frag.spv  triangle.vert.spv
src/: CMakeLists.txt  bump_alloc.cpp  bump_alloc.h  compute_pass.cpp  compute_pass.hpp  descriptor_helper.hpp  dynamic_array.hpp  file.cpp  file.hpp  gpu_buffer.cpp  gpu_context.cpp  graph.hpp  heap_array.hpp  job.cpp  job.hpp  log.hpp  main.cpp  memory.hpp  pass.cpp  pass.hpp  pipeline.cpp  pipeline.hpp  render_graph.cpp  render_graph.hpp  resource.cpp  time.hpp  transfer.hpp  types.hpp
