FILE(GLOB_RECURSE NEZHA_SOURCES "*.cpp" "*.hpp")

SET(CMAKE_CXX_STANDARD 17)

INCLUDE_DIRECTORIES("${CMAKE_SOURCE_DIR}/ext/stb")
INCLUDE_DIRECTORIES("${CMAKE_SOURCE_DIR}/ext/glm")

ADD_EXECUTABLE(nezha_core ${NEZHA_SOURCES})

TARGET_COMPILE_DEFINITIONS(nezha_core PUBLIC GLM_ENABLE_EXPERIMENTAL NEZHA_PROJECT_ROOT="${CMAKE_SOURCE_DIR}")

FIND_PACKAGE(Vulkan)

IF (Vulkan_FOUND)
  MESSAGE(STATUS "Found Vulkan package in system ${Vulkan_LIBRARY}")
  TARGET_INCLUDE_DIRECTORIES(nezha_core PUBLIC "${Vulkan_INCLUDE_DIRS}")
  TARGET_LINK_LIBRARIES(nezha_core PUBLIC "${Vulkan_LIBRARY}" "glfw")
ENDIF()
