FILE(GLOB_RECURSE APP_SOURCES "*.cpp" "*.hpp")

SET(CMAKE_CXX_STANDARD 17)

INCLUDE_DIRECTORIES("${CMAKE_SOURCE_DIR}/ext/stb")
INCLUDE_DIRECTORIES("${CMAKE_SOURCE_DIR}/ext/glm")
INCLUDE_DIRECTORIES("${CMAKE_SOURCE_DIR}/nezha")

ADD_EXECUTABLE(app ${APP_SOURCES})

TARGET_LINK_LIBRARIES(app PUBLIC nezha_core)

TARGET_COMPILE_DEFINITIONS(app PUBLIC GLM_ENABLE_EXPERIMENTAL NEZHA_PROJECT_ROOT="${CMAKE_SOURCE_DIR}")

FIND_PACKAGE(Vulkan)

IF (Vulkan_FOUND)
  MESSAGE(STATUS "Found Vulkan package in system ${Vulkan_LIBRARY}")
  TARGET_INCLUDE_DIRECTORIES(app PUBLIC "${Vulkan_INCLUDE_DIRS}")
  TARGET_LINK_LIBRARIES(app PUBLIC "${Vulkan_LIBRARY}" "glfw")
ENDIF()
