FILE(GLOB_RECURSE APP_SOURCES "*.cpp" "*.hpp")

SET(CMAKE_CXX_STANDARD 17)

INCLUDE_DIRECTORIES("${CMAKE_SOURCE_DIR}/ext/stb")
INCLUDE_DIRECTORIES("${CMAKE_SOURCE_DIR}/ext/glm")
INCLUDE_DIRECTORIES("${CMAKE_SOURCE_DIR}/nezha/include")

ADD_EXECUTABLE(app ${APP_SOURCES})

TARGET_LINK_LIBRARIES(app PUBLIC nezha_core)

TARGET_COMPILE_DEFINITIONS(app PUBLIC GLM_ENABLE_EXPERIMENTAL NEZHA_PROJECT_ROOT="${CMAKE_SOURCE_DIR}")
